plantilla dashboard admin

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--<div *ngIf="hideNavbarOutlet()">-->
-<div>
+<div *ngIf="hideNavbarOutlet()">
   <router-outlet name="navbar"></router-outlet>
 </div>
 <router-outlet></router-outlet>
