--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -27,7 +27,7 @@
               <input name="rememberMe" type="checkbox" formControlNamew="rememberMe"> Remember Me
             </div>
             <div class="input-group form-group">
-              <button class="form-control color-button" type="submit">LOGIN</button>
+              <button class="form-control color-button" type="submit" (click)="onPres()">LOGIN</button>
             </div>
           </form>
         </div>
