--- a/src/app/components/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/components/layouts/admin-layout/admin-layout.component.html
@@ -1,1 +1,6 @@
-<p>admin-layout works!</p>
+<div class="wrapper">
+    <div class="sidebar" data-color="danger" data-background-color="white" data-image="./assets/img/sidebar-1.jpg">
+        <app-admin-sidebar></app-admin-sidebar>
+        <div class="sidebar-background" style="background-image: url(./assets/img/sidebar-4.jpg)"></div>
+    </div>
+</div>
