--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
         <a class="nav-link" href="#">About Us</a>
       </li>
     </ul>
-    <div>
+    <div *ngIf="validateUser">
       <div class="dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
@@ -24,14 +24,15 @@
           <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item">Logout</a>
+          <a class="dropdown-item" (click)="logout()">Logout</a>
         </div>
       </div>
     </div>
-    <div>
-      <button class="btn btn-outline-success my-2 my-sm-0 mr-1" type="submit" routerLink="/user/register">Register</button>
+    <div *ngIf="!validateUser">
+      <button class="btn btn-outline-success my-2 my-sm-0 mr-1" type="submit"
+        routerLink="/user/register">Register</button>
     </div>
-    <div>
+    <div *ngIf="!validateUser">
       <button class="btn btn-outline-success my-2 my-sm-0 mr-2" type="submit" routerLink="/user/login">Login</button>
     </div>
   </div>
