--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -25,7 +25,7 @@
               formControlName="password" />
           </div>
           <div class="input-group form-group row aling-items-center remember">
-            <input name="rememberMe" type="checkbox" formControlNamew="rememberMe"> Remember Me
+            <input name="rememberMe" type="checkbox" formControlName="rememberMe"> Remember Me
           </div>
           <div class="input-group form-group">
             <button class="form-control color-button" type="submit">LOGIN</button>
@@ -35,7 +35,7 @@
       <div class="card-footer">
         <div class="d-flex justify-content-center links">
           Don't have an account?
-          <a routerLink="/signup">Sign Up</a>
+          <a routerLink="/user/register">Sign Up</a>
         </div>
         <div class="d-flex justify-content-center">
           <a href="#" class="color-text">Forgot password?</a>
