--- a/src/app/components/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/components/layouts/admin-layout/admin-layout.component.html
@@ -5,5 +5,6 @@
     </div>
     <div class="main-panel">
         <app-admin-navbar></app-admin-navbar>
+        <router-outlet></router-outlet>
     </div>
 </div>
