agregando componentes a la bienvenida home_web

--- a/src/app/components/home_web/bodyweb/bodyweb.component.html
+++ b/src/app/components/home_web/bodyweb/bodyweb.component.html
@@ -1,1 +1,243 @@
-<p>bodyweb works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col">
+            <app-favorite-food></app-favorite-food>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae obcaecati impedit facere sed ex necessitatibus officia, at adipisci repudiandae corporis ab mollitia tempore totam ipsum amet magni sit vitae aliquam!
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-10">
+            <div class="row">
+                <div class="col">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <div class="card" style="width: 18rem;">
+                                                <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <div class="card-body">
+                                                    <p>
+                                                        <a href="#">
+                                                            <h5 class="card-title text-center text-gray">NOMBRE RESTAURANTE</h5>
+                                                        </a>
+                                                    </p>
+                                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="card" style="width: 18rem;">
+                                                <img class="card-img-top" src="https://www.boliviaentusmanos.com/amarillas1/businesscard/imagenes/respanol1.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <div class=" card-body ">
+                                                    <p>
+                                                        <a href="# ">
+                                                            <h5 class="card-title text-center text-gray ">NOMBRE RESTAURANTE</h5>
+                                                        </a>
+                                                    </p>
+                                                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4 ">
+                                            <div class="card " style="width: 18rem; ">
+                                                <img class="card-img-top " src="https://media-cdn.tripadvisor.com/media/photo-s/11/66/2c/74/fra-interioret.jpg " alt="Card image cap ">
+                                                <div class="card-body ">
+                                                    <p>
+                                                        <a href="# ">
+                                                            <h5 class="card-title text-center text-gray ">NOMBRE RESTAURANTE</h5>
+                                                        </a>
+                                                    </p>
+                                                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <div class="card" style="width: 18rem;">
+                                                <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <div class="card-body">
+                                                    <p>
+                                                        <a href="#">
+                                                            <h5 class="card-title text-center text-gray">NOMBRE RESTAURANTE</h5>
+                                                        </a>
+                                                    </p>
+                                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="card" style="width: 18rem;">
+                                                <img class="card-img-top" src="https://www.boliviaentusmanos.com/amarillas1/businesscard/imagenes/respanol1.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <div class=" card-body ">
+                                                    <p>
+                                                        <a href="# ">
+                                                            <h5 class="card-title text-center text-gray ">NOMBRE RESTAURANTE</h5>
+                                                        </a>
+                                                    </p>
+                                                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4 ">
+                                            <div class="card " style="width: 18rem; ">
+                                                <img class="card-img-top " src="https://media-cdn.tripadvisor.com/media/photo-s/11/66/2c/74/fra-interioret.jpg " alt="Card image cap ">
+                                                <div class="card-body ">
+                                                    <p>
+                                                        <a href="# ">
+                                                            <h5 class="card-title text-center text-gray ">NOMBRE RESTAURANTE</h5>
+                                                        </a>
+                                                    </p>
+                                                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                        </div>
+                        <a class="carousel-control-prev " href="#carouselExampleIndicators " role="button " data-slide="prev ">
+                            <span class="carousel-control-prev-icon " aria-hidden="true "></span>
+                            <span class="sr-only ">Previous</span>
+                        </a>
+                        <a class="carousel-control-next " href="#carouselExampleIndicators " role="button " data-slide="next ">
+                            <span class="carousel-control-next-icon " aria-hidden="true "></span>
+                            <span class="sr-only ">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row ">
+                <div class="col ">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <div class="card" style="width: 18rem;">
+                                                <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <div class="card-body">
+                                                    <p>
+                                                        <a href="#">
+                                                            <h5 class="card-title text-center text-gray">NOMBRE RESTAURANTE</h5>
+                                                        </a>
+                                                    </p>
+                                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="card" style="width: 18rem;">
+                                                <img class="card-img-top" src="https://www.boliviaentusmanos.com/amarillas1/businesscard/imagenes/respanol1.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <div class=" card-body ">
+                                                    <p>
+                                                        <a href="# ">
+                                                            <h5 class="card-title text-center text-gray ">NOMBRE RESTAURANTE</h5>
+                                                        </a>
+                                                    </p>
+                                                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4 ">
+                                            <div class="card " style="width: 18rem; ">
+                                                <img class="card-img-top " src="https://media-cdn.tripadvisor.com/media/photo-s/11/66/2c/74/fra-interioret.jpg " alt="Card image cap ">
+                                                <div class="card-body ">
+                                                    <p>
+                                                        <a href="# ">
+                                                            <h5 class="card-title text-center text-gray ">NOMBRE RESTAURANTE</h5>
+                                                        </a>
+                                                    </p>
+                                                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <div class="card" style="width: 18rem;">
+                                                <img class="card-img-top" src="http://www.hotelgloria.com.bo/imagenes/image-restaurant3.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <div class="card-body">
+                                                    <p>
+                                                        <a href="#">
+                                                            <h5 class="card-title text-center text-gray">NOMBRE RESTAURANTE</h5>
+                                                        </a>
+                                                    </p>
+                                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4">
+                                            <div class="card" style="width: 18rem;">
+                                                <img class="card-img-top" src="https://www.boliviaentusmanos.com/amarillas1/businesscard/imagenes/respanol1.jpg" alt="Card image cap" width="300px" height="220px">
+                                                <div class=" card-body ">
+                                                    <p>
+                                                        <a href="# ">
+                                                            <h5 class="card-title text-center text-gray ">NOMBRE RESTAURANTE</h5>
+                                                        </a>
+                                                    </p>
+                                                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-4 ">
+                                            <div class="card " style="width: 18rem; ">
+                                                <img class="card-img-top " src="https://media-cdn.tripadvisor.com/media/photo-s/11/66/2c/74/fra-interioret.jpg " alt="Card image cap ">
+                                                <div class="card-body ">
+                                                    <p>
+                                                        <a href="# ">
+                                                            <h5 class="card-title text-center text-gray ">NOMBRE RESTAURANTE</h5>
+                                                        </a>
+                                                    </p>
+                                                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <a class="carousel-control-prev " href="#carouselExampleIndicators " role="button " data-slide="prev ">
+                            <span class="carousel-control-prev-icon " aria-hidden="true "></span>
+                            <span class="sr-only ">Previous</span>
+                        </a>
+                        <a class="carousel-control-next " href="#carouselExampleIndicators " role="button " data-slide="next ">
+                            <span class="carousel-control-next-icon " aria-hidden="true "></span>
+                            <span class="sr-only ">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- </div> -->
+        <div class="col-2 ">
+            <app-promotions></app-promotions>
+
+        </div>
+    </div>
+</div>
