--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -10,7 +10,8 @@
                 </div>
             </div>
             <div class="card-body">
-                <form name="form" [formGroup]="userFromGroup" (ngSubmit)="onSubmit()">
+                <!--  <form name="form" [formGroup]="userFromGroup" (ngSubmit)="onSubmit()">--> 
+                <form name="form">
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
